Fix problem of horizontal scrollbar appearing when content was overflowing body by setting overflow to auto in body and html

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,37 +1,49 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     height: 100vh;
     width: 100vw;
+    overflow: auto;
 }
 
 body {
     height: 100%;
     width: 100%;
+    border: 5px solid green;
+    overflow: auto;
+}
+
+body > * {
+    border: 5px solid red;
 }
 
 header {
     height: 50px;
-    background: aqua;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
-img {
-    height: 25px;
-    width: 25px;
+/* style direct descendants of header*/
+header > * {
+    margin: 10px;
+}
+
+.fas {
+
 }
 
 /* Styling for search container and search bar*/
 #search-container {
     height: 25px;
-    width: 400px;
-    background: white;
+    flex: 0 1 400px;
     border: 1px solid #d3d3d3;
     display: inline-block;
 }
 
 #search-bar {
-    background: aquamarine;
     height: 100%;
     display: inline-block;
 }
@@ -41,15 +53,28 @@ img {
     display: inline-block;
 }
 
+/* styling for main area*/
 main {
     display: flex;
 }
 
-#content {
-    background: blueviolet;
-    height: 100%;
-    width: 95%;
-    margin: 0 auto;
+main > * {
+    border: 5px solid yellow;
+    margin: 10px;
+}
+
+/* styling for section*/
+section {
+    flex: 1 1 70%;
+}
+
+section > * {
+    border: 5px solid blue;
+}
+
+aside {
+    background: lightcyan;
+    flex: 1 1 30%;
 }
 
 .subscribe {
